--- a/package.json
+++ b/package.json
@@ -38,12 +38,6 @@
         "webpack": "^5.39.0"
     },
     "homepage": "https://chrisguttandin.github.io/muted-audio-element-test",
-    "husky": {
-        "hooks": {
-            "commit-msg": "commitlint --edit --extends @commitlint/config-angular",
-            "pre-commit": "pretty-quick --config config/prettier/config.json --staged && grunt lint"
-        }
-    },
     "license": "MIT",
     "main": "src/index.html",
     "name": "muted-audio-element-test",
@@ -53,6 +47,7 @@
         "url": "https://github.com/chrisguttandin/muted-audio-element-test.git"
     },
     "scripts": {
+        "prepare": "husky install",
         "test": "grunt lint"
     },
     "version": "1.0.6"
