--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "load-grunt-config": "^4.0.1",
         "prettier": "^2.8.4",
         "pretty-quick": "^3.1.3",
+        "rimraf": "^4.4.1",
         "webpack": "^5.76.1",
         "webpack-cli": "^5.0.1"
     },
