--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@commitlint/config-angular": "^17.4.4",
         "babel-loader": "^9.1.2",
         "commitizen": "^4.3.0",
+        "copy-webpack-plugin": "^11.0.0",
         "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.36.0",
         "eslint-config-holy-grail": "^55.0.18",
