--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "description": "A demo to test if a muted audio element can be used with the Web Audio API.",
     "devDependencies": {
-        "@babel/core": "^7.22.9",
+        "@babel/core": "^7.22.19",
         "@babel/preset-env": "^7.22.9",
         "@commitlint/cli": "^17.6.7",
         "@commitlint/config-angular": "^17.6.7",
@@ -49,5 +49,8 @@
         "prepare": "husky install",
         "test": "npm run lint"
     },
-    "version": "1.1.1"
+    "version": "1.1.1",
+    "dependencies": {
+        "linked": "^0.2.0"
+    }
 }
