--- a/package.json
+++ b/package.json
@@ -49,8 +49,5 @@
         "prepare": "husky install",
         "test": "npm run lint"
     },
-    "version": "1.1.1",
-    "dependencies": {
-        "linked": "^0.2.0"
-    }
+    "version": "1.1.1"
 }
