--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "htmlhint": "^1.1.4",
         "husky": "^8.0.3",
         "hyperlink": "^5.0.4",
+        "lint-staged": "^15.1.0",
         "prettier": "^2.8.8",
         "pretty-quick": "^3.1.3",
         "rimraf": "^5.0.5",
